# ckan-codata

./: .env.example  .gitignore  CONTRIBUTING.MD  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy_ckan.yml
ckan/: Dockerfile  Dockerfile.dev  ckan_dataset_schema.yaml
ckan/docker-entrypoint.d/: 02_setup_codata.sh  02_setup_scheming.sh  03_setup_codata.sh  03_setup_scheming.sh
nginx/: Dockerfile
nginx/setup/: default.conf
src/.cookiecutter_replay/: ckan_extension.json
src/ckanext-codata/: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
src/ckanext-codata/.github/workflows/: test.yml
src/ckanext-codata/ckanext/codata/: plugin.py  test_plugin.py
src/ckanext-codata/ckanext/codata/assets/: faq.js  script.js  webassets.yml
src/ckanext-codata/ckanext/codata/public/: custom.css
src/ckanext-codata/ckanext/codata/templates/: base.html  footer.html  header.html
src/ckanext-codata/ckanext/codata/templates/home/: index.html
src/ckanext-codata/ckanext/codata/templates/home/snippets/: about_text.html  custom_search.html  faq.html  jj.html  metadata_stats.html
src/ckanext-codata/ckanext/codata/templates/scheming/package/: resource_read.html
src/ckanext-codata/ckanext/codata/tests/: test_plugin.py
