[project]
name = "ckanext-codata"
version = "0.0.1"
description = "ckan custom extension to codata ckan instance"
readme = "README.md"
authors = [
    {name = "Gabriel P. Folhes", email = "gabriel.pisa@basedosdados.org"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/sepep-pmsp/ckanext-codata"

[project.entry-points."ckan.plugins"]
codata = "ckanext.codata.plugin:CodataPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
